feat: Update archive slug and link text for consistency across settings and UI

--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -115,9 +115,8 @@
           <select id="template-selector" class="page-type-select">
             <option value="" data-i18n="editor.templatesSelect">Select template...</option>
           </select>
-          <span style="color: var(--border-primary);">|</span>
         </div>
-        <button type="button" id="clear-all-btn" class="btn btn-secondary"> <svg width="14" height="14" viewBox="0 0 24 24"
+        <button type="button" id="clear-all-btn" class="btn btn-danger"> <svg width="14" height="14" viewBox="0 0 24 24"
             fill="none" stroke="currentColor" stroke-width="2">
             <polyline points="23 4 23 10 17 10"></polyline>
             <polyline points="1 20 1 14 7 14"></polyline>
@@ -425,7 +424,7 @@
             </div>
           </div>
         </div>
-        <button id="publish-btn" class="btn btn-primary build-publish-btn" data-i18n="editor.buildPublish">Build & Publish</button>
+        <button id="publish-btn" class="btn btn-primary build-publish-btn" data-i18n="editor.buildPublish">Compile & Publish</button>
       </div>
     </div>
   </div>
